@startuml
'https://plantuml.com/class-diagram

class Formation{
'ATTRIBUTS
- string libellé
- int nbPlaces
- DateTime dateDebut
- DateTime dateFin

'METHODES
+ inscrireSalarie(salarie : Salarie)
+ noterSalarie(note : float, salarie : Salarie, appreciation : string)
}

class Entreprise{
- string nomEntreprise
- string rueEntreprise
- string villeEntreprise
- string $cpEntreprise
}

class Salarie{
- string prenomSalarie
- string nomSalarie
}

class Inscription{
- float noteInscription
- string appreciation
}

Formation "1..1"-->"0..*" Inscription
Inscription "0..*"-->"1..1" Salarie
Salarie "0..*"-->"1..1" Entreprise

@enduml